# final-project-level2-recsys-11

./: .gitignore  README.md  dataclass.py  model_class_test.py  pyproject.toml  rds.env  requirements.txt  utils.py
BPR_configs/: BPR_001.pickle  BPR_002.pickle  BPR_005.pickle  BPR_006.pickle  BPR_007.pickle  BPR_008.pickle  BPR_009.pickle  BPR_010.pickle  BPR_013.pickle  BPR_014.pickle  BPR_015.pickle  BPR_017.pickle  BPR_020.pickle  BPR_021.pickle  BPR_022.pickle  BPR_023.pickle  BPR_026.pickle  BPR_029.pickle  BPR_032.pickle  BPR_033.pickle  BPR_034.pickle  BPR_035.pickle
RecBole/: BPR.py  BPR.sh  BPR.yaml  BPR_collector.py  EASE.py  EASE.sh  EASE.yaml  EASE_collector.py  (+8 more)
frontend/: Main.py  _cache.py  app.py  main.py  pyproject.toml  viz.py
frontend/.streamlit/: config.toml
frontend/assets/: model_vs_model.css
frontend/dash_/: app.py
frontend/dash_/assets/: model_vs_model.css
frontend/dash_/pages/: 00_signup.py  01_login.py  02_compare_table.py  02_model_vs_model.py  03_model_vs_model.py  05_00_deep_analysis_item.py  05_deep_analysis.py  global_component.py  login.py  model_vs_model.py  signup.py
frontend/dash_/pages/assets/: global_component.py  sidebar.css
frontend/design/: body.py  head.py
frontend/pages/: 00_signup.py  01_login.py  02_Model_vs_Model.py  02_compare_table.py  03_Single_Model_Analysis.py  03_model_vs_model.py  04_Reranking.py  04_reranking.py  05_00_deep_analysis_item.py  05_deep_analysis.py  06_Docs.py  06_FAQ.py  About.py  docs.md  global_component.py  home.py
frontend/pages/utils/: deep_analysis_func.py  global_component.py
(+68 files in other folders)
