[tool.poetry]
name = "web4rec-front"
version = "0.1.0"
description = "web4rec's frontend env"
authors = ["suheon <soso6079@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "web4rec_front"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
dash = "^2.8.1"
dash-bootstrap-components = "^1.4.0"
plotly = "^5.13.1"
passlib = "^1.7.4"
pydantic = "^1.10.5"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
dash-ag-grid = "2.0.0a1"

[tool.poetry.group.dev.dependencies]
numpy = "^1.24.2"
pandas = "^1.5.3"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
